feat: HTTP status codes
Add HTTP status response codes to API endpoints

Fix #353
